[gd_scene load_steps=14 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://HitBoxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Shooter/AggresiveShooter.gd" type="Script" id=4]
[ext_resource path="res://Effects/BlinkAnimationPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/FlashWhite.shader" type="Shader" id=6]
[ext_resource path="res://HitBoxes/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sounds/retro spell.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.25395, 7.43232 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=3]
radius = 5.98396

[sub_resource type="Animation" id=4]
resource_name = "aim"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.299341 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.296609 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 1 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 11.7475

[node name="AggresiveShooter" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 2147483652
script = ExtResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.255906, 0.255906 )
texture = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="SeeLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_top = -14.3125
margin_right = 40.0
margin_bottom = -0.3125
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 11

[node name="BlinkAnimationPlayer" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aim = SubResource( 4 )

[node name="FirePoint" type="Position2D" parent="."]

[node name="IdleWalkTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 2.0

[node name="ReactionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CloseDistanceTimer" type="Timer" parent="."]
one_shot = true

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]
collision_layer = 64
collision_mask = 2147483712

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 5 )

[node name="SpellSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="IdleWalkTimer" to="." method="_on_IdleWalkTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="ReactionTimer" to="." method="_on_ReactionTimer_timeout"]
[connection signal="timeout" from="CloseDistanceTimer" to="." method="_on_CloseDistanceTimer_timeout"]

[editable path="Hurtbox"]

[editable path="SoftCollision"]
